[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/ControlSelectDialog.gd" type="Script" id=1]
[ext_resource path="res://Audios/Menu Click.wav" type="AudioStream" id=2]

[node name="ControlSelectPopupDialog" type="PopupDialog"]
margin_left = -300.0
margin_top = -200.0
margin_right = 300.0
margin_bottom = 100.0
popup_exclusive = true
script = ExtResource( 1 )

[node name="EraseButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 210.0
margin_right = -410.0
margin_bottom = -20.0
focus_mode = 0
enabled_focus_mode = 0
text = "Erase"

[node name="OKButton" type="Button" parent="."]
margin_left = 210.0
margin_top = 210.0
margin_right = 390.0
margin_bottom = 280.0
disabled = true
enabled_focus_mode = 0
text = "OK"

[node name="CancelButton" type="Button" parent="."]
margin_left = 410.0
margin_top = 210.0
margin_right = 580.0
margin_bottom = 280.0
focus_mode = 0
enabled_focus_mode = 0
text = "Cancel"

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 580.0
margin_bottom = 190.0

[node name="Keyboard" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 45.0
margin_right = -5.0
margin_bottom = -5.0

[node name="Label" type="Label" parent="TabContainer/Keyboard"]
margin_left = 15.0
margin_top = 15.0
margin_right = 535.0
margin_bottom = 105.0
text = "Press key"
align = 1
valign = 1

[node name="Mouse" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 45.0
margin_right = -5.0
margin_bottom = -5.0

[node name="OptionButton" type="OptionButton" parent="TabContainer/Mouse"]
margin_left = 15.0
margin_top = 15.0
margin_right = 535.0
margin_bottom = 105.0
text = "Left mouse button"
align = 1
icon_align = 1
items = [ "Left mouse button", null, false, 1, null, "Right mouse button", null, false, 2, null, "Middle mouse button", null, false, 3, null, "Mouse wheel up", null, false, 4, null, "Mouse wheel down", null, false, 5, null ]
selected = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -5.0

[connection signal="pressed" from="EraseButton" to="." method="_on_EraseButton_pressed"]
[connection signal="pressed" from="OKButton" to="." method="_on_OKButton_pressed"]
[connection signal="pressed" from="CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="tab_changed" from="TabContainer" to="." method="_on_TabContainer_tab_changed"]
[connection signal="item_selected" from="TabContainer/Mouse/OptionButton" to="." method="_on_OptionButton_item_selected"]
